infra/k8s/acquire-worker/base/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: acquire-worker
spec:
  selector:
    app: acquire-worker
  ports:
    - name: http
      port: 8790
      targetPort: 8790
